background color changed
changed background color

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     /* Change the color of links on hover */
     .topnav a:hover {
       background-color: #ddd;
-      color: black;
+      color: rgb(50, 111, 119);
     }
 
     /* Add a color to the active/current link */
