--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     html,
     body {
       padding: 0;
-      background-color: black;
+      background-color: rgb(0, 117, 153);
       margin: 0;
     }
 
