--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       right: 0;
       bottom: 0;
       left: 0;
-      background-color: #000;
+      background-color: #004e7a;
       position: relative !important;
     }
 
