--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-  <script src="https://www.webglearth.com/v2/api.js"></script>
-  <script src="main.js"></script>
+  <!-- <script src="https://www.webglearth.com/v2/api.js"></script>
+  <script src="main.js"></script> -->
   <style>
     html,
     body {
@@ -12,14 +12,14 @@
       margin: 0;
     }
 
-    #map {
+    /* #map {
       top: 0;
       right: 0;
       bottom: 0;
       left: 0;
       background-color: #004e7a;
       position: relative !important;
-    }
+    } */
 
     /* Add a black background color to the top navigation */
     .topnav {
@@ -49,21 +49,83 @@
       background-color: #0449aa;
       color: white;
     }
+
+    /* hero background image */
+    .bgimage {
+      height: 100vh;
+      background: url('images/heroImage.jpeg');
+      background-size: cover;
+      position: relative;
+    }
+
+    /* text css above hero image*/
+    .hero_title {
+      font-size: 4.5rem;
+    }
+
+    .hero_desc {
+      font-size: 2rem;
+    }
+
+    .hero-text {
+      text-align: center;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+    }
   </style>
-  <title>WebGL Earth API v2 examples: Rotating globe animation</title>
-  <meta name="description"
-    content="Free and open-source 3D digital globe for web and mobile devices. This example shows how to rotate the Earth in a beautiful animation.">
+  <title>Kevin Richard Ramirez Portfolio</title>
 </head>
+<!--Title section with name and short description-->
 
 <body onload="initialize()">
-  <!-- division for the world view map -->
-  <div id="map"></div>
+  <section class="bgimage" id="home">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
+          <h2 class="hero_title">Kevin Ramirez Portfolio</h2>
+          <p class="hero_desc">Web developer and aspiring VR game developer.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Tool bar -->
-  <div class="topnav">
-    <a class="active" href="#home">Home</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
-  </div>
+  <nav class="navbar navbar-expand-lg fixed-top navbarScroll">
+    <div class="container">
+      <a class="navbar-brand" href="#">Kevin Ramirez</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#services">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#portfolio">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
+
+      </div>
+    </div>
+  </nav>
+
+  <!-- division for the world view map
+  <div id="map"></div> -->
+
 </body>
 
 </html>
