--- a/index.html
+++ b/index.html
@@ -53,27 +53,32 @@
     /* hero background image */
     .bgimage {
       height: 100vh;
-      background: url('images/heroImage.jpeg');
+      background: url('src/Japan_Lake.jpg');
       background-size: cover;
       position: relative;
     }
 
     /* text css above hero image*/
-    .hero_title {
+    .name_title {
       font-size: 4.5rem;
     }
 
-    .hero_desc {
+    .my_description {
       font-size: 2rem;
     }
 
-    .hero-text {
+    .title-text {
       text-align: center;
       position: absolute;
-      top: 50%;
+      top: 35%;
       left: 50%;
       transform: translate(-50%, -50%);
       color: white;
+    }
+
+    /* about section image css */
+    .imageAboutPage {
+      width: 100%;
     }
   </style>
   <title>Kevin Richard Ramirez Portfolio</title>
@@ -84,9 +89,9 @@
   <section class="bgimage" id="home">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-          <h2 class="hero_title">Kevin Ramirez Portfolio</h2>
-          <p class="hero_desc">Web developer and aspiring VR game developer.</p>
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 title-text">
+          <h2 class="name_title">Kevin Ramirez Portfolio</h2>
+          <p class="my_description">Web developer and aspiring VR game developer.</p>
         </div>
       </div>
     </div>
