--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
 <head>
   <!-- <script src="https://www.webglearth.com/v2/api.js"></script>
   <script src="main.js"></script> -->
+
+  <title>Kevin Richard Ramirez Portfolio</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--bootstrap-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
+  <!-- font awesome -->
+  <script src="https://kit.fontawesome.com/31149d48b0.js" crossorigin="anonymous"></script>
+  <!-- linking css file -->
+  <link rel="stylesheet" href="style.css">
+
   <style>
     html,
     body {
@@ -13,13 +25,13 @@
     }
 
     /* #map {
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      background-color: #004e7a;
-      position: relative !important;
-    } */
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #004e7a;
+  position: relative !important;
+  } */
 
     /* Add a black background color to the top navigation */
     .topnav {
@@ -81,7 +93,7 @@
       width: 100%;
     }
   </style>
-  <title>Kevin Richard Ramirez Portfolio</title>
+
 </head>
 <!--Title section with name and short description-->
 
@@ -128,6 +140,51 @@
     </div>
   </nav>
 
+  <!-- about section-->
+  <section id="about">
+    <div class="container mt-4 pt-4">
+      <h1 class="text-center">About Me</h1>
+      <div class="row mt-4">
+        <div class="col-lg-4">
+          <img src="src/my_face_japan.jpg" class="imageAboutPage" alt="">
+        </div>
+
+        <div class="col-lg-8">
+          <p> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took
+            a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but
+            also the leap into electronic typesetting, remaining essentially unchanged
+
+          </p>
+          <div class="row mt-3">
+            <div class="col-md-6">
+              <ul>
+                <li>Name: Kevin Ramirez</li>
+                <li>Age: 26</li>
+                <li>Occupation: Web Developer</li>
+
+              </ul>
+            </div>
+            <div class="col-md-6">
+              <ul>
+                <li>Name: Kevin Ramirez</li>
+                <li>Age: 26</li>
+                <li>Occupation: Web Developer</li>
+
+              </ul>
+            </div>
+          </div>
+          <div class="row mt-3">
+            <p> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
+              took a galley of type and scrambled it to make a type specimen book. It has survived not only five
+              centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+              Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took
+              a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
+              but also the leap into electronic typesetting, remaining essentially unchanged.
+            </p>
+          </div>
+        </div>
+      </div>
+  </section>
   <!-- division for the world view map
   <div id="map"></div> -->
 
