--- a/index.html
+++ b/index.html
@@ -1,116 +1,23 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <!-- <script src="https://www.webglearth.com/v2/api.js"></script>
-  <script src="main.js"></script> -->
-
-  <title>Kevin Richard Ramirez Portfolio</title>
+  <title>Portfolio Website-Brad</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--bootstrap-->
+  <!-- bootstrap CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/31149d48b0.js" crossorigin="anonymous"></script>
   <!-- linking css file -->
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    html,
-    body {
-      padding: 0;
-      background-color: rgb(0, 117, 153);
-      margin: 0;
-    }
-
-    /* #map {
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: #004e7a;
-  position: relative !important;
-  } */
-
-    /* Add a black background color to the top navigation */
-    .topnav {
-      background-color: #333;
-      overflow: hidden;
-      padding-inline-end: 12cm;
-    }
-
-    /* Style the links inside the navigation bar */
-    .topnav a {
-      float: right;
-      color: #f2f2f2;
-      text-align: center;
-      padding: 14px 30px;
-      text-decoration: none;
-      font-size: 17px;
-    }
-
-    /* Change the color of links on hover */
-    .topnav a:hover {
-      background-color: #ddd;
-      color: rgb(50, 111, 119);
-    }
-
-    /* Add a color to the active/current link */
-    .topnav a.active {
-      background-color: #0449aa;
-      color: white;
-    }
-
-    /* hero background image */
-    .bgimage {
-      height: 100vh;
-      background: url('src/Japan_Lake.jpg');
-      background-size: cover;
-      position: relative;
-    }
-
-    /* text css above hero image*/
-    .name_title {
-      font-size: 4.5rem;
-    }
-
-    .my_description {
-      font-size: 2rem;
-    }
-
-    .title-text {
-      text-align: center;
-      position: absolute;
-      top: 35%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: white;
-    }
-
-    /* about section image css */
-    .imageAboutPage {
-      width: 100%;
-    }
-  </style>
-
 </head>
-<!--Title section with name and short description-->
 
-<body onload="initialize()">
-  <section class="bgimage" id="home">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 title-text">
-          <h2 class="name_title">Kevin Ramirez Portfolio</h2>
-          <p class="my_description">Web developer and aspiring VR game developer.</p>
-        </div>
-      </div>
-    </div>
-  </section>
+<body>
+  <!-- navbar -->
 
-  <!-- Tool bar -->
-  <nav class="navbar navbar-expand-lg fixed-top navbarScroll">
+  <nav class="navbar navbar-expand-lg fixed-top navbarScroll navbar-dark">
     <div class="container">
       <a class="navbar-brand" href="#">Kevin Ramirez</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -140,7 +47,19 @@
     </div>
   </nav>
 
-  <!-- about section-->
+  <!-- main banner -->
+  <section class="bgimage" id="home">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
+          <h2 class="hero_title">Kevin Ramirez Portfolio</h2>
+          <p class="hero_desc">Web developer and aspiring VR developer</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- about section -->
   <section id="about">
     <div class="container mt-4 pt-4">
       <h1 class="text-center">About Me</h1>
@@ -185,8 +104,238 @@
         </div>
       </div>
   </section>
-  <!-- division for the world view map
-  <div id="map"></div> -->
+
+  <!-- services section-->
+
+  <section class="container section" id="services">
+    <h1 class="text-center">Services</h1>
+    <div class="row">
+      <div class="col-lg-4 mt-4">
+        <div class="card servicesText">
+          <div class="card-body">
+            <i class="fas servicesIcon fa-clock"></i>
+            <h4 class="card-title mt-3">Website Development</h4>
+            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the
+              card's content.
+              Some quick example text to build on the card title and make up the bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 mt-4">
+        <div class="card servicesText">
+          <div class="card-body">
+            <i class='fas servicesIcon fa-layer-group'></i>
+            <h4 class="card-title mt-3">Website Design</h4>
+            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the
+              card's content.
+              Some quick example text to build on the card title and make up the bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 mt-4">
+        <div class="card servicesText">
+          <div class="card-body">
+            <i class='far servicesIcon fa-check-circle'></i>
+            <h4 class="card-title mt-3">Website Deployment</h4>
+            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the
+              card's content.
+              Some quick example text to build on the card title and make up the bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-4 mt-4">
+        <div class="card servicesText">
+          <div class="card-body">
+            <i class='fas servicesIcon fa-search'></i>
+            <h4 class="card-title mt-3">SEO</h4>
+            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the
+              card's content.
+              Some quick example text to build on the card title and make up the bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 mt-4">
+        <div class="card servicesText">
+          <div class="card-body">
+            <i class='fas servicesIcon fa-shield-alt'></i>
+            <h4 class="card-title mt-3">DevOps</h4>
+            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the
+              card's content.
+              Some quick example text to build on the card title and make up the bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 mt-4">
+        <div class="card servicesText">
+          <div class="card-body">
+            <i class='fas servicesIcon fa-wrench'></i>
+            <h4 class="card-title mt-3">QA</h4>
+            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the
+              card's content.
+              Some quick example text to build on the card title and make up the bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- portfolio section-->
+  <section class="section" id="portfolio">
+    <div class="container mt-3">
+      <h1 class="text-center">Portfolio</h1>
+      <div class="row">
+        <div class="col-lg-4 mt-4">
+          <div class="card">
+            <img class="card-img-top" src="src/toryi.jpg" alt="Card image" style="width:100%">
+            <div class="card-body">
+              <h4 class="card-title">YouTube Clone</h4>
+              <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+              <div class="text-center">
+                <a href="#" class="btn btn-success">Link</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 mt-4">
+          <div class="card">
+            <img class="card-img-top" src="src/toryi.jpg" alt="Card image" style="width:100%">
+            <div class="card-body">
+              <h4 class="card-title">Quiz App</h4>
+              <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+              <div class="text-center">
+                <a href="#" class="btn btn-success">Link</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 mt-4">
+          <div class="card">
+            <img class="card-img-top" src="src/toryi.jpg" alt="Card image" style="width:100%">
+            <div class="card-body">
+              <h4 class="card-title">Product Landing Page</h4>
+              <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+              <div class="text-center">
+                <a href="#" class="btn btn-success">Link</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-lg-4 mt-4">
+          <div class="card">
+            <img class="card-img-top" src="src/toryi.jpg" alt="Card image" style="width:100%">
+            <div class="card-body">
+              <h4 class="card-title">Messaging Service</h4>
+              <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+              <div class="text-center">
+                <a href="#" class="btn btn-success">Link</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 mt-4">
+          <div class="card">
+            <img class="card-img-top" src="src/toryi.jpg" alt="Card image" style="width:100%">
+            <div class="card-body">
+              <h4 class="card-title">Twitter Clone</h4>
+              <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+              <div class="text-center">
+                <a href="#" class="btn btn-success">Link</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 mt-4">
+          <div class="card">
+            <img class="card-img-top" src="src/toryi.jpg" alt="Card image" style="width:100%">
+            <div class="card-body">
+              <h4 class="card-title">Blog App</h4>
+              <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+              <div class="text-center">
+                <a href="#" class="btn btn-success">Link</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  </section>
+
+  <!-- contact section-->
+  <!-- https://getbootstrap.com/docs/5.2/forms/overview -->
+  <section class="container mt-3 section" id="contact">
+    <h1 class="text-center">Contact Me</h1>
+
+    <div class="row mt-4">
+      <div class="col-lg-6">
+        <!-- to edit google map go to https://www.embed-map.com type your location, generate html code and copy the html  -->
+        <div style="max-width:100%;overflow:hidden;color:red;width:500px;height:500px;">
+          <div id="embedmap-canvas" style="height:100%; width:100%;max-width:100%;">
+            <iframe style="height:100%;width:100%;border:0;" frameborder="0"
+              src="https://www.google.com/maps/embed/v1/place?q=sydney+NSW&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8">
+            </iframe>
+          </div>
+          <a class="googlemaps-html" href="https://www.embed-map.com"
+            id="get-data-forembedmap">https://www.embed-map.com</a>
+          <style>
+            #embedmap-canvas img {
+              max-width: none !important;
+              background: none !important;
+              font-size: inherit;
+              font-weight: inherit;
+            }
+          </style>
+        </div>
+      </div>
+
+      <div class="col-lg-6">
+        <!-- form fields -->
+        <form>
+          <input type="text" class="form-control form-control-lg" placeholder="Name">
+          <input type="email" class="form-control mt-3" placeholder="Email">
+          <input type="text" class="form-control mt-3" placeholder="Subject">
+          <div class="mb-3 mt-3">
+            <textarea class="form-control" rows="5" id="comment" name="text" placeholder="Project Details"></textarea>
+          </div>
+        </form>
+        <button type="button" class="btn btn-success mt-3">Contact Me</button>
+      </div>
+    </div>
+
+  </section>
+
+  <!-- footer section-->
+  <footer class="container-fluid footer" id="footer">
+    <!-- social media icons -->
+    <div class="social-icons mt-4">
+      <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+      <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+      <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.twitch.tv/" target="_blank"><i class="fab fa-twitch"></i></a>
+    </div>
+  </footer>
+
+
+  <!-- load javascript after loading all html content -->
+  <script src="script/script.js"></script>
 
 </body>
 
