--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-          <h2 class="hero_title">Kevin Ramirez Portfolio</h2>
+          <h2 class="hero_title">Kevin Ramirez</h2>
           <p class="hero_desc">Web developer and aspiring VR developer</p>
         </div>
       </div>
