--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <nav class="navbar navbar-expand-lg fixed-top navbarScroll navbar-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">Kevin Ramirez</a>
+      <a class="navbar-brand" href="#">Kevin</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -289,7 +289,9 @@
         <div style="max-width:100%;overflow:hidden;color:red;width:500px;height:500px;">
           <div id="embedmap-canvas" style="height:100%; width:100%;max-width:100%;">
             <iframe style="height:100%;width:100%;border:0;" frameborder="0"
-              src="https://www.google.com/maps/embed/v1/place?q=sydney+NSW&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8">
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d433987.11821778514!2d-106.75418602620312!3d31.810710409956744!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86e73f8bc5fe3b69%3A0xe39184e3ab9d0222!2sEl%20Paso%2C%20TX%2C%20USA!5e0!3m2!1sen!2smx!4v1686937277549!5m2!1sen!2smx"
+              width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade">
             </iframe>
           </div>
           <a class="googlemaps-html" href="https://www.embed-map.com"
