--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Portfolio Website-Brad</title>
+  <title>Portfolio Kevin Ramirez</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- bootstrap CDN -->
@@ -69,40 +69,24 @@
         </div>
 
         <div class="col-lg-8">
-          <p> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took
-            a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but
-            also the leap into electronic typesetting, remaining essentially unchanged
+          <p> Computer science has always been my passion since I was young when i started making games in python and
+            java, but more then everything I like to create new things and methods for solving problem related to
+            Computer science they are all like
+            their own little puzzles that are fun and interesting to solve.
 
           </p>
-          <div class="row mt-3">
-            <div class="col-md-6">
-              <ul>
-                <li>Name: Kevin Ramirez</li>
-                <li>Age: 26</li>
-                <li>Occupation: Web Developer</li>
-
-              </ul>
-            </div>
-            <div class="col-md-6">
-              <ul>
-                <li>Name: Kevin Ramirez</li>
-                <li>Age: 26</li>
-                <li>Occupation: Web Developer</li>
-
-              </ul>
-            </div>
-          </div>
-          <div class="row mt-3">
-            <p> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
-              took a galley of type and scrambled it to make a type specimen book. It has survived not only five
-              centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-              Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took
-              a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
-              but also the leap into electronic typesetting, remaining essentially unchanged.
-            </p>
-          </div>
+        </div>
+        <div class="row mt-3">
+          <p> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
+            took a galley of type and scrambled it to make a type specimen book. It has survived not only five
+            centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took
+            a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
+            but also the leap into electronic typesetting, remaining essentially unchanged.
+          </p>
         </div>
       </div>
+    </div>
   </section>
 
   <!-- services section-->
@@ -289,7 +273,9 @@
         <div style="max-width:100%;overflow:hidden;color:red;width:500px;height:500px;">
           <div id="embedmap-canvas" style="height:100%; width:100%;max-width:100%;">
             <iframe style="height:100%;width:100%;border:0;" frameborder="0"
-              src="https://www.google.com/maps/embed/v1/place?q=sydney+NSW&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8">
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d216992.12610962708!2d-106.58966773240039!3d31.81132040553297!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86e73f8bc5fe3b69%3A0xe39184e3ab9d0222!2sEl%20Paso%2C%20TX!5e0!3m2!1sen!2sus!4v1686708799465!5m2!1sen!2sus"
+              width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade">
             </iframe>
           </div>
           <a class="googlemaps-html" href="https://www.embed-map.com"
