--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <nav class="navbar navbar-expand-lg fixed-top navbarScroll navbar-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">Kevin</a>
+      <a class="navbar-brand" href="#">Kevin Ramirez</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -52,7 +52,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-          <h2 class="hero_title">Kevin Ramirez</h2>
+          <h2 class="hero_title">Kevin Ramirez Portfolio</h2>
           <p class="hero_desc">Web developer and aspiring VR developer</p>
         </div>
       </div>
@@ -71,22 +71,30 @@
         <div class="col-lg-8">
           <p> Computer science has always been my passion since I was young when i started making games in python and
             java, but more then everything I like to create new things and methods for solving problem related to
-            Computer science they are all like
-            their own little puzzles that are fun and interesting to solve.
+            Computer science they are all like their own little puzzles that are fun and interesting to solve.
 
           </p>
-        </div>
-        <div class="row mt-3">
-          <p> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
-            took a galley of type and scrambled it to make a type specimen book. It has survived not only five
-            centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took
-            a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
-            but also the leap into electronic typesetting, remaining essentially unchanged.
-          </p>
+          <div class="row mt-3">
+            <div class="col-md-6">
+              <ul>
+                <li>Name: Kevin Ramirez</li>
+                <li>Age: 26</li>
+                <li>Occupation: Web Developer</li>
+
+              </ul>
+            </div>
+          </div>
+          <div class="row mt-3">
+            <p> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
+              took a galley of type and scrambled it to make a type specimen book. It has survived not only five
+              centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+              Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took
+              a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
+              but also the leap into electronic typesetting, remaining essentially unchanged.
+            </p>
+          </div>
         </div>
       </div>
-    </div>
   </section>
 
   <!-- services section-->
