removed services for now

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
   <!-- services section-->
 
-  <section class="container section" id="services">
+  <!-- <section class="container section" id="services">
     <h1 class="text-center">Services</h1>
     <div class="row">
       <div class="col-lg-4 mt-4">
@@ -181,7 +181,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- portfolio section-->
   <section class="section" id="portfolio">
