adding to portfolio

--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
             <div class="col-md-6">
               <ul>
                 <li>Name: Kevin Ramirez</li>
-                <li>Age: 26</li>
                 <li>Occupation: Web Developer</li>
 
               </ul>
@@ -192,20 +191,24 @@
           <div class="card">
             <img class="card-img-top" src="src/toryi.jpg" alt="Card image" style="width:100%">
             <div class="card-body">
-              <h4 class="card-title">YouTube Clone</h4>
-              <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+              <h4 class="card-title">Music Mixing based on Location</h4>
+              <p class="card-text"> Live audio stream mixing based on user device location.</p>
               <div class="text-center">
-                <a href="#" class="btn btn-success">Link</a>
+                <a href="#" class="btn btn-success" onclick="musicPage()">Link</a>
               </div>
             </div>
           </div>
         </div>
-
+        <script>
+          function musicPage() {
+            location.replace("./musicMix.html")
+          }
+        </script>
         <div class="col-lg-4 mt-4">
           <div class="card">
             <img class="card-img-top" src="src/toryi.jpg" alt="Card image" style="width:100%">
             <div class="card-body">
-              <h4 class="card-title">Quiz App</h4>
+              <h4 class="card-title">VR Game Development for kinesiology studies</h4>
               <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
               <div class="text-center">
                 <a href="#" class="btn btn-success">Link</a>
