--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       <div class="row">
         <div class="col-lg-4 mt-4">
           <div class="card">
-            <img class="card-img-top" src="src/toryi.jpg" alt="Card image" style="width:100%">
+            <img class="card-img-top" src="src/Music+.png" alt="Card image" style="width:100%">
             <div class="card-body">
               <h4 class="card-title">Music+: Audio Mixing based on Location</h4>
               <p class="card-text"> Live audio stream mixing based on user device location.</p>
@@ -205,11 +205,6 @@
             </div>
           </div>
         </div>
-        <script>
-          function musicPage() {
-            location.replace("./musicMix.html")
-          }
-        </script>
         <div class="col-lg-4 mt-4">
           <div class="card">
             <img class="card-img-top" src="src/toryi.jpg" alt="Card image" style="width:100%">
@@ -323,6 +318,11 @@
       <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
       <a href="https://www.twitch.tv/" target="_blank"><i class="fab fa-twitch"></i></a>
     </div>
+    <script>
+          function musicPage() {
+            location.replace("./musicMix.html")
+          }
+        </script>
   </footer> -->
 
 
