--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       <div class="row">
         <div class="col-lg-4 mt-4">
           <div class="card">
-            <img class="card-img-top" src="src/Music+.png" alt="Card image" style="width:100%">
+            <img class="card-img-top" src="src/Music+.jpg" alt="Card image" style="width:100%">
             <div class="card-body">
               <h4 class="card-title">Music+: Audio Mixing based on Location</h4>
               <p class="card-text"> Live audio stream mixing based on user device location.</p>
