--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <nav class="navbar navbar-expand-lg fixed-top navbarScroll navbar-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">Kevin Ramirez</a>
+      <a class="navbar-brand" href="#">Kevin</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -31,9 +31,6 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#services">Services</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#portfolio">Portfolio</a>
