added vid of VR example

--- a/index.html
+++ b/index.html
@@ -211,6 +211,10 @@
               <div class="text-center">
                 <button type="button" class="collapsible btn btn-success">Open</button>
                 <div class="content">
+                  <video width="300" controls>
+                    <source src="./src/vrvidExample.mp4" type="video/mp4">
+                    Your browser does not support HTML video.
+                  </video>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                     labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
                     nisi ut aliquip ex ea commodo consequat.</p>
