added pictures to vr description

--- a/index.html
+++ b/index.html
@@ -204,10 +204,10 @@
         </div>
         <div class="col-lg-4 mt-4">
           <div class="card">
-            <img class="card-img-top" src="src/toryi.jpg" alt="Card image" style="width:100%">
+            <img class="card-img-top" src="src/VR pic.jpg" alt="Card image" style="width:100%">
             <div class="card-body">
               <h4 class="card-title">VR Game Development for kinesiology studies</h4>
-              <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting </p>
+              <p class="card-text">VR project for study of sensorymotor abilities.</p>
               <div class="text-center">
                 <button type="button" class="collapsible btn btn-success">Open</button>
                 <div class="content">
@@ -215,9 +215,9 @@
                     <source src="./src/vrvidExample.mp4" type="video/mp4">
                     Your browser does not support HTML video.
                   </video>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                    nisi ut aliquip ex ea commodo consequat.</p>
+                  <p>This VR project for the kinesiology department at UTEP aims to study the sensorymotor abilities of
+                    children with autism.
+                  </p>
                 </div>
                 <!-- <a href="#" class="btn btn-success">Link</a> -->
               </div>
