--- a/index.html
+++ b/index.html
@@ -193,11 +193,10 @@
               <div class="text-center">
                 <button type="button" class="collapsible btn btn-success">Open</button>
                 <div class="content">
-                  <a href="https://culdesacdude.github.io/src/Music Based on Geolocation.pdf"
+                  <a href="http://culdesacdude.github.io/src/Music Based on Geolocation.pdf"
                     target="_blank">Download</a>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                    nisi ut aliquip ex ea commodo consequat.</p>
+                  <p>Live audio mixing based on user's geolocation. Music changes based on a grid of zones at the
+                    Centenial plaza at UTEP. Please review file above.</p>
                 </div>
                 <!-- <a href="#" class="btn btn-success" onclick="musicPage()">Link</a> -->
               </div>
