kinda fixed it.

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
               <div class="text-center">
                 <button type="button" class="collapsible btn btn-success">Open</button>
                 <div class="content">
-                  <a href="http://culdesacdude.github.io/src/Music Based on Geolocation.pdf"
+                  <a href="https://github.com/CuldesacDude/CuldesacDude.github.io/blob/main/src/Interactive%20Music%20Based%20on%20Geolocation%20.pdf"
                     target="_blank">Download</a>
                   <p>Live audio mixing based on user's geolocation. Music changes based on a grid of zones at the
                     Centenial plaza at UTEP. Please review file above.</p>
