--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           <div class="card">
             <img class="card-img-top" src="src/Music+.jpg" alt="Card image" style="width:100%">
             <div class="card-body">
-              <h4 class="card-title">Music+: Audio Mixing based on Location</h4>
+              <h4 class="card-title">Music+: Audio Mixing based on Location Website</h4>
               <p class="card-text"> Live audio stream mixing based on user device location.</p>
               <div class="text-center">
                 <button type="button" class="collapsible btn btn-success">Open</button>
@@ -230,7 +230,7 @@
           <div class="card">
             <img class="card-img-top" src="src/toryi.jpg" alt="Card image" style="width:100%">
             <div class="card-body">
-              <h4 class="card-title">Product Landing Page</h4>
+              <h4 class="card-title">Museum VR</h4>
               <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
               <div class="text-center">
                 <button type="button" class="collapsible btn btn-success">Open</button>
