--- a/index.html
+++ b/index.html
@@ -81,12 +81,8 @@
             </div>
           </div>
           <div class="row mt-3">
-            <p> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
-              took a galley of type and scrambled it to make a type specimen book. It has survived not only five
-              centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-              Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took
-              a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
-              but also the leap into electronic typesetting, remaining essentially unchanged.
+            <p> Main goal at the moment is to continue to grow and sharpen my understanding of new technologies that
+              will allow me one day too create something which I am most proud of.
             </p>
           </div>
         </div>
@@ -235,6 +231,10 @@
               <div class="text-center">
                 <button type="button" class="collapsible btn btn-success">Open</button>
                 <div class="content">
+                  <video width="300" controls>
+                    <source src="./src/VRMus.mp4" type="video/mp4">
+                    Your browser does not support HTML video.
+                  </video>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                     labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
                     nisi ut aliquip ex ea commodo consequat.</p>
