--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
         <div class="col-lg-4 mt-4">
           <div class="card">
-            <img class="card-img-top" src="src/toryi.jpg" alt="Card image" style="width:100%">
+            <img class="card-img-top" src="src/musVR.jpg" alt="Card image" style="width:100%">
             <div class="card-body">
               <h4 class="card-title">Museum VR</h4>
               <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -235,9 +235,7 @@
                     <source src="./src/VRMus.mp4" type="video/mp4">
                     Your browser does not support HTML video.
                   </video>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                    nisi ut aliquip ex ea commodo consequat.</p>
+                  <p>VR game currently under development.</p>
                 </div>
                 <!-- <a href="#" class="btn btn-success">Link</a> -->
               </div>
