--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <img class="card-img-top" src="src/musVR.jpg" alt="Card image" style="width:100%">
             <div class="card-body">
               <h4 class="card-title">Museum VR</h4>
-              <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+              <p class="card-text">VR game currently under development.</p>
               <div class="text-center">
                 <button type="button" class="collapsible btn btn-success">Open</button>
                 <div class="content">
@@ -235,7 +235,7 @@
                     <source src="./src/VRMus.mp4" type="video/mp4">
                     Your browser does not support HTML video.
                   </video>
-                  <p>VR game currently under development.</p>
+                  <p></p>
                 </div>
                 <!-- <a href="#" class="btn btn-success">Link</a> -->
               </div>
